--- a/phone.css
+++ b/phone.css
@@ -71,14 +71,11 @@ hr {
 .sub {
     display: flex;
     font-size: 14px;
-    margin-left: 10px;
     margin-top: 16px;
     margin-bottom: 12px;
 }
 
-.side-head {
-    margin-left: 10px;
-}
+
 
 .side-sub input {
     background-color: red;
@@ -126,9 +123,6 @@ hr {
     opacity: 0.5;
 }
 
-.box p {
-    margin-left: 14px;
-}
 
 .phone-section {
     display: flex;
@@ -146,7 +140,7 @@ hr {
 }
 
 .main-section {
-    padding: 14px 64px 64px 20px;
+    padding: 14px 70px 64px 20px;
     margin-top: 20px;
     margin-left: 20px;
 }
@@ -282,6 +276,27 @@ button {
     padding: 7px;
     font-size: 12px;
     opacity: 1;
+}
+
+.range-slider {
+    accent-color: red;
+    width: 100%;
+    font-size: 12px;
+    color: #828282;
+}
+
+.range-slider input {
+    width: 100%;
+    margin-top: 15px;
+}
+
+.money {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    font-size: 14px;
+    color: #000;
+    opacity: 0.55;
 }
 
 @media (max-width: 1025px) {
