--- a/Styles/phone.css
+++ b/Styles/phone.css
@@ -9,14 +9,120 @@ body {
     background: transparent;
 }
 
+/* ********************* */
+/*       Header          */
+/* ********************* */
+.header {
+    background-color: white;
+}
+
+.notification {
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    line-height: 50px;
+    color: white;
+    font-size: 16px;
+}
+
+.x-icon {
+    margin-right: 35px;
+    cursor: pointer;
+}
+
+.nav-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    font-size: 14px;
+    line-height: 50px;
+    /* position: fixed ; */
+    z-index: 10;
+    background-color: #fff;
+    transition: all .5s;
+}
+
+.menu-icon {
+    font-size: 14px;
+    cursor: pointer;
+    padding: 0px 20px;
+}
+
+.logo {
+    width: 130px;
+    height: 44px;
+}
+
+.menu-1 {
+    display: flex;
+    align-items: center;
+}
+
+.menu-2 {
+    display: flex;
+    align-items: center;
+}
+
+.menu {
+    cursor: pointer;
+    padding: 0px 12px;
+}
+
+.menu a {
+    text-decoration: none;
+    color: black;
+}
+
+.active {
+    border-bottom: 1px solid #f50514;
+}
+
+.menu:hover {
+    border-bottom: 1px solid red;
+}
+
+.logo-container {
+    display: flex;
+}
+
+.logo-container a {
+    height: 40px;
+}
+
+.bars {
+    display: none;
+}
+
+.menu-container {
+    display: flex;
+}
+
+.menu2-container {
+    display: flex;
+}
+
+.menu-icon-container {
+    display: flex;
+}
+
+.bars {
+    display: none;
+}
+
 .check {
     font-size: 100px;
 }
+
+/* ********************* */
+/*       Top Section         */
+/* ********************* */
 
 .top-section {
     display: flex;
     width: 85%;
     margin: auto;
+    margin-top: 20px;
     justify-content: space-between;
     text-align: center;
     height: 128px;
@@ -51,6 +157,10 @@ body {
     padding: 0px 2px;
 }
 
+/* ********************* */
+/*       Sidebar          */
+/* ********************* */
+
 .sidebar {
     height: 100%;
     width: 27%;
@@ -65,9 +175,9 @@ hr {
 .box {
     position: relative;
     display: flex;
-
+    gap: 10px;
+    margin-left: 10px;
 }
-
 
 .sub {
     display: flex;
@@ -300,165 +410,156 @@ button {
     opacity: 0.55;
 }
 
-/* ******************** */
-/*     Login Page */
-/* ******************** */
+/* ********************* */
+/*       Footer Menu       */
+/* ********************* */
 
-.login {
-    max-width: 550px;
-    margin: auto;
-    background-color: #f8f1f1;
-    border-radius: 30px;
-    box-shadow: 3px 35px 149px -3px rgba(0, 0, 0, 0.46);
-    margin-top: 50px;
-    font-family: 'Roboto', sans-serif;
-    padding: 25px;
-    position: relative;
-}
-
-.login-head h1 {
-    padding-top: 25px;
-    font-weight: 100;
-}
-
-.cross {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    opacity: 0.3;
-}
-
-.num {
-    display: flex;
-    width: 70%;
-    margin: auto;
-    height: 35px;
-    border-radius: 3px;
-    background-color: #FFF;
-    margin-top: 30px;
-}
-
-.num input {
+.separator-2 {
     width: 100%;
-    border: none;
-    outline: none;
+    height: 56px;
+    background-color: transparent;
 }
 
-.po {
-    margin-top: 6.5px;
-    margin-right: 10px;
+.footer {
+    background-color: #000;
 }
 
-.number {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    padding: 10px;
-    gap: 5px;
-}
-
-.number i {
-    color: #000;
-    opacity: 0.55;
-}
-
-.verify input {
-    width: 79%;
-    cursor: not-allowed;
-    opacity: 0.5;
-}
-
-.verify p {
-    opacity: 0.5;
-}
-
-.get {
-    margin-top: 11px;
-    font-size: 12px;
-}
-
-.sign-in {
-    font-size: 12px;
-    margin-left: 85px;
-    margin-top: 10px;
-}
-
-.sign-in a {
-    text-decoration: none;
-    color: rgb(19, 123, 227);
-    font-weight: 600;
-}
-
-.continue {
-    width: 200px;
+.footer-menu {
+    width: 85%;
     margin: auto;
-    background-color: #d2cbcb;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 20px;
-    margin-top: 40px;
-    opacity: 0.5;
-    font-weight: 100;
-    cursor: not-allowed ;
-}
-
-hr {
-    margin-top: 110px;
-    z-index: 6;
-    position: relative;
-    color: #000;
-}
-
-.other-ways {
-    margin-top: -10px;
-    z-index: 2;
-    text-align: center;
-}
-
-.login-icons {
     display: flex;
     justify-content: space-between;
-    max-width: 25%;
-    margin: auto;
-    margin-top: 30px;
 }
 
-.email {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
+.foot {
+    text-align: left;
+    width: 100%;
+    padding-right: 20px;
 }
 
-.login-icons i {
-    font-size: 25px;
+.zoro {
+    line-height: 52px;
+    color: #FFF;
 }
 
-.privacy {
-    display: flex;
-    max-width: 85%;
-    margin: auto;
-    margin-top: 20px;
-}
-
-.sign {
-    max-width: 70%;
-    margin: auto;
-}
-
-.sign a {
-    color: rgb(19, 123, 227);
-    text-decoration: none;
+.zoro i {
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 100
 }
 
+.breadcrumbs {
+    font-size: 14px;
+    width: 85%;
+    margin: auto;
+}
+
+.menus {
+    font-size: 12px;
+    color: #fffafa;
+    opacity: 0.8;
+    padding: 8px 0px;
+    cursor: pointer;
+}
+
+.social {
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+    margin: auto;
+    color: #fffafa;
+    opacity: 0.8;
+    font-size: 12px;
+    margin-bottom: 24px;
+}
+
+.left-social {
+    display: flex;
+    cursor: pointer;
+    gap: 24px;
+}
+
+.right-social {
+    display: flex;
+    gap: 24px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.social-1 {
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+    margin: auto;
+    color: #fffafa;
+    opacity: 0.8;
+    font-size: 12px;
+    padding-bottom: 32px;
+}
+
+.left-social-1 {
+    display: flex;
+    gap: 10px;
+}
+
+.right-social-1 {
+    display: flex;
+    gap: 24px;
+    font-size: 14px;
+}
+
+.haz {
+    padding-right: 10px;
+    border-right: 1px solid #fffafacb;
+    font-size: 12px;
+    cursor: pointer;
+    text-align: left;
+    height: 16px;
+}
+
+.haze img {
+    width: 75px;
+    height: 24px;
+    cursor: pointer;
+    border: none;
+}
+
+.menus a {
+    color: #ffffff;
+    opacity: 0.5;   
+    text-decoration: none;
+}
+
+.menus a:hover {
+    color: rgb(255, 255, 255);
+    opacity: 1;
+}
+
+
+
+@media (max-width: 1360px) {
+    .menu2-container {
+        display: none;
+    }
+    .nav-menu {
+        justify-content: space-between;
+        padding: 0px 30px;
+    }
+}
 
 
 @media (max-width: 1025px) {
     .phone-section {
         display: block;
+    }
+    .bars {
+        display: block;
+    }
+    .menu-container {
+        display: none;
+    }
+    .nav-menu {
+        display: flex;
+        justify-content: space-between;
     }
 }
 
